--- a/hugo.yaml
+++ b/hugo.yaml
@@ -86,7 +86,7 @@ params:
 
     comments:
         enabled: true
-        provider: disqus
+        provider: giscus
 
         disqusjs:
             shortname:
