--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,7 +1,7 @@
 baseurl: https://ashecorp.github.io
 languageCode: en-us
 theme: stack
-title: Arashe Novel
+title: ArashePUB
 copyright: arashe.com
 
 # Theme i18n support
